# mcp-cpp-sdk

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  STREAMABLE_HTTP_PLAN.md  TRANSPORT_PLAN.md
cmake/: FetchDependencies.cmake
examples/: CMakeLists.txt  calculator_server.cpp  echo_server.cpp  http_test_server.cpp  http_upgrade_transport.cpp  simple_client.cpp  tcp_transport.cpp  unix_socket_transport.cpp  websocket_transport.cpp
include/mcp/: mcp.hpp
include/mcp/auth/: auth.hpp
include/mcp/handler/: client_handler.hpp  context_parts.hpp  prompt_router.hpp  server_handler.hpp  tool_router.hpp
include/mcp/macros/: prompt_macros.hpp  tool_macros.hpp
include/mcp/model/: capabilities.hpp  completion.hpp  content.hpp  elicitation.hpp  error.hpp  init.hpp  jsonrpc.hpp  logging.hpp  meta.hpp  notifications.hpp  pagination.hpp  prompt.hpp  resource.hpp  roots.hpp  sampling.hpp  task.hpp  tool.hpp  types.hpp  unions.hpp
include/mcp/service/: cancellation_token.hpp  context.hpp  peer.hpp  running_service.hpp  service.hpp  service_role.hpp
include/mcp/task_manager/: operation_processor.hpp
include/mcp/transport/: async_rw_transport.hpp  child_process_transport.hpp  into_transport.hpp  local_session.hpp  local_session_manager.hpp  never_session_manager.hpp  oneshot_transport.hpp  session_id.hpp  session_manager.hpp  sse_message.hpp  sse_stream.hpp  stdio_transport.hpp  streamable_http_client.hpp  streamable_http_server.hpp  transport.hpp  websocket_transport.hpp  worker_transport.hpp
src/auth/: auth.cpp
src/handler/: client_handler.cpp  prompt_router.cpp  server_handler.cpp  tool_router.cpp
src/model/: capabilities.cpp  completion.cpp  content.cpp  elicitation.cpp  error.cpp  init.cpp  jsonrpc.cpp  logging.cpp  meta.cpp  notifications.cpp  pagination.cpp  prompt.cpp  resource.cpp  roots.cpp  sampling.cpp  task.cpp  tool.cpp  types.cpp  unions.cpp
src/service/: client_init.cpp  peer.cpp  running_service.cpp  server_init.cpp
src/task_manager/: operation_processor.cpp
src/transport/: async_rw_transport.cpp  child_process_transport.cpp  local_session_manager.cpp  never_session_manager.cpp  oneshot_transport.cpp  sse_message.cpp  stdio_transport.cpp  streamable_http_client.cpp  streamable_http_server.cpp  websocket_transport.cpp
tests/: CMakeLists.txt  test_jsonrpc.cpp  test_model_serialization.cpp  test_service_loop.cpp  test_tool_router.cpp  test_transports.cpp
